# hummingbot

./: .coveragerc  .gitignore  CURSOR_VSCODE_SETUP.md  Makefile  all_tests.ps1  all_tests.sh  conftest.py  custom-settings.txt  nonkyc_phase1_claude_code_prompt.md  nonkyc_phase2_claude_code_prompt.md  pyproject.toml
.github/workflows/: ci-live-contract.yml  ci-test.yml
hummingbot/client/: performance.py
hummingbot/client/command/: start_command.py
hummingbot/connector/exchange/mexc/: mexc_order_book.py
hummingbot/connector/exchange/nonkyc/: README.md  nonkyc_api_order_book_data_source.py  nonkyc_api_user_stream_data_source.py  (+6 more)
hummingbot/core/: connector_manager.py
hummingbot/core/data_type/: order_book_tracker.py  order_book_tracker_data_source.py  user_stream_tracker_data_source.py
hummingbot/core/rate_oracle/: rate_oracle.py
hummingbot/core/utils/: kill_switch.py
hummingbot/data_feed/candles_feed/: candles_factory.py  data_types.py
hummingbot/model/: sql_connection_manager.py
hummingbot/remote_iface/: messages.py  mqtt.py
hummingbot/strategy/: strategy_v2_base.py
hummingbot/strategy_v2/controllers/: directional_trading_controller_base.py  market_making_controller_base.py
hummingbot/strategy_v2/executors/: executor_orchestrator.py
test/: run_coverage_remediation.ps1  test_quickstart_cli.py
test/hummingbot/client/: test_performance.py
test/hummingbot/core/: test_connector_manager.py
test/hummingbot/remote_iface/: test_mqtt.py  test_mqtt_contract.py
test/hummingbot/strategy/: test_strategy_v2_base.py
test/mock/: mock_mqtt_server.py
(+57 files in other folders)
