[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "quarantined: tests that are temporarily broken or flaky and excluded from the blocking CI lane",
    "live_api: tests that hit live exchange endpoints and require real API credentials",
    "slow: tests that take more than 30 seconds to run",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel", "numpy>=2.2.6", "cython>=3.0.12"]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true
conda_env = "hummingbot"
filter_files = true
skip = ["setup.py"]
